--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "recoil": "^0.5.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/recoil": "^0.0.9",
     "@types/styled-components": "^5.1.15",
     "@types/uuid": "^8.3.1"
   }
